five-dsl-compiler/compile_errors.txt
warning: unused import: `debug_log`
 --> five-vm-mito/src/context.rs:7:5
  |
7 |     debug_log,
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `heapless::String as HString`
  --> five-vm-mito/src/handlers/option_result.rs:12:5
   |
12 | use heapless::String as HString;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `five-vm-mito` (lib) generated 2 warnings (run `cargo fix --lib -p five-vm-mito` to apply 2 suggestions)
    Checking five-dsl-compiler v0.1.0 (/Users/amberjackson/Documents/Development/five-org/five-dsl-compiler)
warning: type `structure` should have an upper camel case name
   --> five-dsl-compiler/src/ast/generated.rs:427:10
    |
427 | pub enum structure {
    |          ^^^^^^^^^ help: convert the identifier to upper camel case (notice the capitalization): `Structure`
    |
    = note: `#[warn(non_camel_case_types)]` on by default

warning: unused imports: `AstNode` and `generated::*`
  --> five-dsl-compiler/src/ast/conversions.rs:10:18
   |
10 | use crate::ast::{AstNode, generated::*};
   |                  ^^^^^^^  ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `InterfaceSerializer`
 --> five-dsl-compiler/src/bytecode_generator/ast_generator/functions.rs:9:59
  |
9 | use crate::type_checker::{InterfaceInfo, InterfaceMethod, InterfaceSerializer};
  |                                                           ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `InstructionParameter` and `TypeNode`
 --> five-dsl-compiler/src/bytecode_generator/module_merger.rs:6:27
  |
6 | use crate::ast::{AstNode, InstructionParameter, TypeNode};
  |                           ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^

warning: unused import: `five_vm_mito::error::VMError`
  --> five-dsl-compiler/src/module_resolver.rs:12:5
   |
12 | use five_vm_mito::error::VMError;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `EventFieldAssignment`
 --> five-dsl-compiler/src/type_checker/definition_builder.rs:8:48
  |
8 |     ErrorVariant, ModuleSpecifier, Visibility, EventFieldAssignment, TestAttribute,
  |                                                ^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `AstNode` and `TypeNode`
 --> five-dsl-compiler/src/type_checker/type_safe_checker.rs:8:18
  |
8 | use crate::ast::{AstNode, TypeNode, generated::*};
  |                  ^^^^^^^  ^^^^^^^^

error[E0124]: field `assigned_slot` is already declared
  --> five-dsl-compiler/src/bytecode_generator/scope_analyzer.rs:20:5
   |
19 |     pub assigned_slot: Option<usize>,
   |     -------------------------------- `assigned_slot` first declared here
20 |     pub assigned_slot: Option<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ field already declared

error[E0062]: field `assigned_slot` specified more than once
  --> five-dsl-compiler/src/bytecode_generator/scope_analyzer.rs:20:5
   |
19 |     pub assigned_slot: Option<usize>,
   |     -------------------------------- first use of `assigned_slot`
20 |     pub assigned_slot: Option<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ used more than once

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/ast_generator/mod.rs:871:17
    |
871 |                 is_public: _,
    |                 ^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/ast_generator/mod.rs:117:31
    |
117 |                         name, is_public, ..
    |                               ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
  --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:86:25
   |
86 |                         is_public, name, ..
   |                         ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:214:57
    |
214 |                 if let AstNode::InstructionDefinition { is_public, .. } = instruction_def {
    |                                                         ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:233:21
    |
233 |                     is_public,
    |                     ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:266:21
    |
266 |                     is_public,
    |                     ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:583:21
    |
583 |                     is_public,
    |                     ^^^^^^^^^

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:593:21
    |
593 |                     is_public,
    |                     ^^^^^^^^^

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> five-dsl-compiler/src/bytecode_generator/function_dispatch.rs:672:28
    |
672 |             scope_analyzer.declare_variable(&param.name, &param_type)?;
    |                            ^^^^^^^^^^^^^^^^-------------------------- argument #3 of type `bool` is missing
    |
note: method defined here
   --> five-dsl-compiler/src/bytecode_generator/scope_analyzer.rs:207:12
    |
207 |     pub fn declare_variable(&mut self, name: &str, var_type: &str, is_parameter: bool) -> Result<(), VMError> {
    |            ^^^^^^^^^^^^^^^^                                        ------------------
help: provide the argument
    |
672 |             scope_analyzer.declare_variable(&param.name, &param_type, /* bool */)?;
    |                                                                     ++++++++++++

warning: use of deprecated field `ast::AstNode::InstructionDefinition::is_public`: use visibility field instead
   --> five-dsl-compiler/src/type_checker/mod.rs:165:17
    |
165 |                 is_public: _,
    |                 ^^^^^^^^^^^^

warning: unused variable: `name`
   --> five-dsl-compiler/src/bytecode_generator/ast_generator/functions.rs:360:48
    |
360 |                     if let AstNode::Identifier(name) = object.as_ref() {
    |                                                ^^^^ help: if this is intentional, prefix it with an underscore: `_name`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> five-dsl-compiler/src/compiler/mod.rs:289:13
    |
289 |         let mut graph = discoverer.discover_modules(entry_point).map_err(|e| {
    |             ----^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> five-dsl-compiler/src/compiler/mod.rs:426:13
    |
426 |         let mut graph = discoverer.discover_modules(entry_point).map_err(|e| {
    |             ----^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `e`
   --> five-dsl-compiler/src/module_resolver.rs:231:27
    |
231 |                 .map_err(|e| ModuleResolutionError::ModuleNotFound {
    |                           ^ help: if this is intentional, prefix it with an underscore: `_e`

Some errors have detailed explanations: E0061, E0062, E0124.
For more information about an error, try `rustc --explain E0061`.
warning: `five-dsl-compiler` (lib) generated 20 warnings
error: could not compile `five-dsl-compiler` (lib) due to 3 previous errors; 20 warnings emitted
